# finstack-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  claude_desktop_config.json.example  pyproject.toml  railway.json  server.json  vercel.json
.github/workflows/: ci.yml
dashboard-api/: .env.example  main.py  requirements.txt  telegram_bot.py
docs/: ARTHEX_TRADINGVIEW_ROADMAP.md  ARTICLE_ASSETS.md  DAILY_BRIEF.md  FINSTACK_DASHBOARD_PLAN.md  FINSTACK_OPERATING_MANUAL.md  FOUNDER_PLAYBOOK.md  GITHUB_LAUNCH_KIT.md  INTEREST_TO_PAYMENT.md  LAUNCH_GUIDE.md  LAUNCH_POSTS_MOBILE.md  LAUNCH_TODAY.md  MASTER_TRACKER.md  PARTNER_PLAN.md  PROOF_AND_ACCURACY.md  RELEASE_CHECKLIST.md  WORKLOG.md
docs/assets/: .gitkeep
landing-page/: dashboard.html  ideas.html  index.html  social-cards.html  spawnagent-banner.html
landing-page/css/: dashboard.css
landing-page/js/: dashboard.js
src/finstack/: __init__.py  briefs.py  config.py  payments.py  server.py
src/finstack/data/: agents.py  agm.py  analytics.py  broker.py  broker_dhan.py  broker_fyers.py  broker_icici.py  broker_upstox.py  budget.py  circuit.py  credit_esg.py  divergence.py  earnings.py  fundamentals.py  global_markets.py  gst.py  insider_pattern.py  market_intelligence.py  mf_overlap.py  nse.py  nse_advanced.py  portfolio.py  probability.py  promoter_watch.py  pump_detector.py  research.py  sebi_tracker.py  sentiment.py  signal_tracker.py  smart_money.py  telegram_tracker.py
src/finstack/tools/: agents.py  analytics.py  broker_credit_esg.py  brokers.py  global_.py  (+9 more)
tests/: test_briefs.py  test_nse_data.py  test_payments.py  test_server.py
(+4 files in other folders)
